# VNTRseek

./: .gitignore  CMakeLists.txt  FindDeps.cmake  HISTORY.md  INSTALL.md  README.md  REFERENCE_FORMATS  RESULTS.md  RUNNING.md  defaults.vs.cnf  example.qsub  hg19.db  info.txt  profile.h  reduce_db.sql  reduced_db.sql  redund2.c  seqtk  sqlite_schema.sql  updaterefs.pl  vntrseek.pl  vs.cnf
lib/VNTRseek/: SeqReader.pm
perl/: CMakeLists.txt  checkleb36.pl  compress_reads.pl  extra_index.pl  insert_reads.pl  map_dup.pl  pcr_dup.pl  print_gained_by_patsize.pl  print_spanned_reads.pl  produce_indist.pl  reduce_db.pl  remove_sw_fpvntrs.pl  renumber.pl  run_edges.pl  run_flankcomp.pl  run_proclu.pl  run_rankflankmap.pl  run_trf_ng.pl  run_variability.pl  setdbstats.pl  updaterefs.pl  vntrseek.pl
perl/lib/: Product.pm  SeqReader.pm  vutil.pm
perl/lib/Summarize/: print_distr.pm  print_latex.pm  print_unclustered.pl  print_unmapped.pl
perl/lib/VNTRseek/: SeqReader.pm
postinst/: CMakeLists.txt
src/: CMakeLists.txt
src/edlib/: CMakeLists.txt  align.c
src/join_clusters/: joinc.c
src/newflankalign/: flankalign.c
src/redund_code/: CMakeLists.txt  redund2.c
src/trf2proclu-ngs/: trf2proclu-ngs.c
